Changed port number and updated upstart script to work with current environment

--- a/js-client-network.conf
+++ b/js-client-network.conf
@@ -9,7 +9,7 @@ script
 	export HOME="/home/adam"
 	
 	echo $$ > /var/run/js-client-network.pid
-	exec sudo -u adam /user/local/bin/node  /home/adam/projects/git/js-client-network/app.js >> /var/log/js-client-network.sys.log 2>&1
+	exec sudo -u adam /usr/bin/node  /home/adam/projects/git/js-client-network/app.js >> /var/log/js-client-network.sys.log 2>&1
 end script
 
 pre-start script
