updated config with new comments and updated view.

--- a/js-client-network.conf
+++ b/js-client-network.conf
@@ -1,4 +1,8 @@
 #!upstart
+# place this file in /etc/init
+# to start run sudo start js-client-network
+# to stop run sudo stop js-client-network
+
 description "node.js server"
 author      "adam"
 
